--- a/project/html/pages/index.ejs
+++ b/project/html/pages/index.ejs
@@ -9,12 +9,12 @@
   <div class="page-header">
 
   
-    <h1>My Web App</h1>
+    <h1>It's Me, Borat!</h1>
   </div>
 
   <p>Click on the button for a surprise.</p>
 
-  <button onClick="showPicture()" class="btn btn-dark">Click me</button>
+  <button onClick="showPicture()" class="btn btn-dark">Click Here!</button>
 
   <div id="image"></div>
   
