--- a/project/html/pages/Projects.ejs
+++ b/project/html/pages/Projects.ejs
@@ -9,7 +9,7 @@
   <div class="page-header">
     <% include ../helpers/navbar %>
   
-    <h1>It's Me, Borat!</h1>
+    <h1>Projects</h1>
   </div>
 
   <p>Click on the button for a surprise.</p>
@@ -19,12 +19,10 @@
   <div id="image"></div>
   
 </body>
-
 <footer class="footer">
-  <% include ../helpers/footer %>
+    <% include ../helpers/footer %>
 
 
 
 </footer>
-
 </html>
